--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,7 @@
                                             </g>
                                         </svg>
 
-                                        <span>Track Your Order</span>
+                                        <span>Estado de Orden</span>
                                     </a>
                                     <span class="vertical_line style2 d-none d-md-block"></span>
                                     <a href="compare.html"
@@ -250,7 +250,7 @@
                                         </div>
                                     </div>
                                     <span class="vertical_line style2 d-none d-md-block"></span>
-                                    <a href="carrito"
+                                    <a href="user"
                                         class="single_top_lists d-flex align-items-center d-none d-md-inline-flex">
 
                                         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12"
@@ -607,7 +607,7 @@
     </div>
 
     <div id="filter_category_1" class="amaz_section section_spacing2">
-        <div class="container">
+        <div class="containerm">
             <!-- Categoría  -->
             <div class="card">
                 <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
