--- a/public/list3.html
+++ b/public/list3.html
@@ -14,10 +14,11 @@
 
 <body>
     <!-- Top Nav Bar -->
-    <nav class="cyan darken-1" role="navigation">
+    <nav class="cyan darken-1" style="background-color: #FF9800 !important;" role="navigation">
         <div class="nav-wrapper container">
-            <a id="logo-container" href="/user" class="brand-logo">
-                <span class="font list-name">Pulenta</span>
+            <a href="/user">
+                <img src="uploads/settings/65284ca307ab2.png" alt="Pulentaa"
+                    title="Pulentaa">
             </a>
         </div>
     </nav>
