--- a/public/user.html
+++ b/public/user.html
@@ -19,12 +19,15 @@
 <body>
     <!-- Top Nav Bar -->
     <main>
-        <nav class="cyan darken-1" role="navigation">
+        <nav class="cyan darken-1" style="background-color: #FF9800 !important;" role="navigation">
             <button data-target="slide-out" class="sidenav-trigger">
                 <i class="material-icons">menu</i>
             </button>
             <div class="nav-wrapper container">
-                <a id="logo-container" href="index.html" class="brand-logo"><span class="font">Pulenta</span></a>
+                <a href="index.htm">
+                    <img src="uploads/settings/65284ca307ab2.png" alt="Pulentaa"
+                        title="Pulentaa">
+                </a>
                 
                 <ul class="right">
                     <li>
