--- a/public/list.html
+++ b/public/list.html
@@ -12,8 +12,14 @@
 </head>
 <body>
     <!-- Top Nav Bar -->
-    <nav class="cyan darken-1" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"><span class="font">Pulenta</span></a>
+    <nav class="cyan darken-1" style="background-color: #FF9800 !important;" role="navigation">
+        <div class="nav-wrapper container">
+            <div class="logo_img">
+                <a href="index.htm">
+                    <img src="uploads/settings/65284ca307ab2.png" alt="Pulentaa"
+                        title="Pulentaa">
+                </a>
+            </div>
           <ul class="right">
             <li><a id="navEdit" class="" href="">Editar</a></li>
           </ul>
