--- a/public/list.html
+++ b/public/list.html
@@ -15,7 +15,7 @@
     <nav class="cyan darken-1" style="background-color: #FF9800 !important;" role="navigation">
         <div class="nav-wrapper container">
             <div class="logo_img">
-                <a href="index.htm">
+                <a href="/user">
                     <img src="uploads/settings/65284ca307ab2.png" alt="Pulentaa"
                         title="Pulentaa">
                 </a>
