--- a/public/user.html
+++ b/public/user.html
@@ -24,7 +24,7 @@
                 <i class="material-icons">menu</i>
             </button>
             <div class="nav-wrapper container">
-                <a href="index.htm">
+                <a href="/user">
                     <img src="uploads/settings/65284ca307ab2.png" alt="Pulentaa"
                         title="Pulentaa">
                 </a>
