--- a/public/list2.html
+++ b/public/list2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Oleo+Script" rel="stylesheet">
     <link rel="stylesheet" href="css/list.css">
-    <title>The List</title>
+    <title>Lista</title>
 </head>
 
 <body>
