feat: :hammer: Productos
Listado de Productos desde una lista fija con imagenes aleatorias

--- a/public/index.html
+++ b/public/index.html
@@ -765,19 +765,10 @@
                         <div class="amaz_recomanded_box_head">
                             <h4 class="mb-0">MÁS PRODUCTOS QUE TE PUEDEN ENCANTAR</h4>
                         </div>
-<div class="product-container">
-    <!-- Producto 1 -->
-    <div class="product-card">
-        <img src="mazon...4235234.jpg" alt="Producto 1">
-        <div class="product-info">
-            <div class="product-name">amazon...product%@#%#@$</div>
-            <div class="product-price">$00.00</div>
-        </div>
-    </div>
-</div>
-
+                        <div class="product-container" id="product-container">
+                            <!-- Aquí se llenan los productos con jQuery -->
+                        </div>
                     </div>
-
                 </div>
                 <div class="col-12 text-center">
 
