--- a/public/index.html
+++ b/public/index.html
@@ -609,45 +609,11 @@
 
     <div id="filter_category_1" class="amaz_section section_spacing2">
         <div class="containerm">
-            <!-- Categoría  -->
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-
-
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
+            <!-- Categorías se agregarán aquí dinámicamente -->
         </div>
     </div>
+    
+    <!-- Agrega esta sección donde quieras mostrar las categorías -->
 
     <div id="filter_category_2" class="amaz_section section_spacing2 ">
         <div class="container ">
