feat: :hammer: Categorias
Se agrego listado de categorias desde listado

--- a/public/index.html
+++ b/public/index.html
@@ -608,44 +608,9 @@
     </div>
 
     <div id="filter_category_1" class="amaz_section section_spacing2">
-        <div class="containerm">
-            <!-- Categoría  -->
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-
-
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
-
-            <div class="card">
-                <img src="uploads/images/21-10-2023/a.jpg" alt="Categoría ">
-                <div class="category-name">Categoría </div>
-            </div>
+        <div class="containerm" id="category-container">
+            <!-- Categorías lllenadas desde jquery  -->
+         
         </div>
     </div>
 
