--- a/public/index.html
+++ b/public/index.html
@@ -560,7 +560,11 @@
     <!-- home_banner::start  -->
     <div class="home_banner bannerUi_active owl-carousel ">
         <a class="banner_img" href="#">
-            <img class="img-fluid" src="uploads/images/21-10-2023/6534076f83b65.jpeg" alt="Slider Principal"
+            <img class="img-fluid" src="uploads/images/21-10-2023/6534076f83b65.jpg" alt="Slider Principal"
+                title="Slider Principal">
+        </a>
+        <a class="banner_img" href="#">
+            <img class="img-fluid" src="uploads/images/21-10-2023/na.png" alt="Slider Principal"
                 title="Slider Principal">
         </a>
     </div><!-- home_banner::end  -->
