--- a/public/index.html
+++ b/public/index.html
@@ -554,9 +554,6 @@
         </ul>
     </header>
     <!--/ HEADER::END -->
-
-    <!--/ HEADER::END -->
-
     <!-- home_banner::start  -->
     <div class="home_banner bannerUi_active owl-carousel ">
         <a class="banner_img" href="#">
@@ -865,8 +862,7 @@
                             </div>
                             <div class="social__Links">
                                 <div class="subcribe-form mb_20 theme_mailChimp2 modal-content">
-                                    <h4>Login</h4>
-                                    <form class="col s12">
+                                   <br> <form class="col s12">
                                         <div class="row">
                                             <div class="input-field col s12">
                                                 <input id="login-email" type="email" class="form-control validate"
